cicd/kubernetes/overlays/dev/frontend-dev-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  template:
    spec:
      containers:
      - name: frontend
